@@ -28,4 +28,9 @@ class Blog(folder.ATFolder):
 
     security = ClassSecurityInfo()
 
+    security.declarePublic('canSetDefaultPage')
+    def canSetDefaultPage(self):
+        return False
+
+
 registerType(Blog, PROJECTNAME)
