@@ -1,8 +1,10 @@
 """Definition of the Blog Category content type
 """
-from zope.interface import implements
+
+from AccessControl import ClassSecurityInfo
 from Products.ATContentTypes.content import folder
 from Products.ATContentTypes.content import schemata
+from zope.interface import implements
 
 from Products.ATContentTypes.config import HAS_LINGUA_PLONE
 if HAS_LINGUA_PLONE:
@@ -23,8 +25,13 @@ schemata.finalizeATCTSchema(BlogCategorySchema,
 class BlogCategory(folder.ATFolder):
     """Blog Category"""
     implements(IBlogCategory)
+    security = ClassSecurityInfo()
 
     portal_type = "BlogCategory"
     schema = BlogCategorySchema
+
+    security.declarePublic('canSetDefaultPage')
+    def canSetDefaultPage(self):
+        return False
 
 registerType(BlogCategory, PROJECTNAME)
